# pyodide_deno_embed

./: Cargo.toml  package-lock.json  package.json  readme.md  runner.ts
src/: main.rs
