[package]
name = "erunner"
version = "0.1.0"
edition = "2024"

# https://github.com/rscarson/rustyscript/issues/332
[patch.crates-io]
deno_media_type = { git = 'https://github.com/denoland/deno_media_type', tag = "0.2.6" }

[dependencies]
rustyscript = { git = "https://github.com/rscarson/rustyscript.git", branch = "master", features = ["default", "worker", "node_experimental"] }
libffi-sys = {  version = "2.3.0", features = ["system"] }

